Fixxing breezy hr attempt 1

--- a/careers2.html
+++ b/careers2.html
@@ -353,7 +353,6 @@
 
     #bzOpeningsContainer p,
     #bzOpeningsContainer span,
-    #bzOpeningsContainer div,
     #bzOpeningsContainer li {
       color: #e5e7eb !important;
     }
@@ -390,7 +389,7 @@
 </head>
 
 <body>
-  <div class=" site-wrapper">
+  <div class="site-wrapper">
     <header class="site-header">
       <div class="nav-inner">
         <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
@@ -410,7 +409,7 @@
           <a href="index.html">Home</a>
           <a href="about.html">About Us</a>
           <a href="services.html">Services</a>
-          <a href="careers.html">Careers</a>
+          <a href="careers2.html">Careers</a>
           <a href="contact.html">Contact Us</a>
           <a href="thought-leadership.html">Meet Our Team</a>
           <a href="toolkit.html">Our Toolkit</a>
