--- a/careers2.html
+++ b/careers2.html
@@ -421,8 +421,10 @@
       <!-- JOB OPENINGS -->
       <section class="section section-alt">
         <div class="section-inner">
-          <div id='bzOpeningsContainer'></div>
-          <script src='https://3n-consulting-llc.breezy.hr/embed/js?inline=true'></script>
+          <div id="bzOpeningsContainer">
+            <p style="color:white">Breezy embed loaded successfully</p>
+          </div>
+          <script src="https://3n-consulting-llc.breezy.hr/embed/js?inline=true"></script>
         </div>
       </section>
     </main>
