testing breezy attempt 2

--- a/careers2.html
+++ b/careers2.html
@@ -422,7 +422,7 @@
       <section class="section section-alt">
         <div class="section-inner">
           <div id="bzOpeningsContainer">
-            <p style="color:white">Breezy embed loaded successfully</p>
+            <p style="color:black">TESTING - BREEZY LOADED!</p>
           </div>
           <script src="https://3n-consulting-llc.breezy.hr/embed/js?inline=true"></script>
         </div>
