Applicant Tracker Addition

--- a/careers2.html
+++ b/careers2.html
@@ -410,7 +410,7 @@
           <a href="about.html">About Us</a>
           <a href="services.html">Services</a>
           <a href="thought-leadership.html">Thought Leadership</a>
-          <a href="careers2.html">Careers</a>
+          <a href="careers.html">Careers</a>
           <a href="contact.html">Contact Us</a>
           <a href="meet-our-team.html">Meet Our Team</a>
           <a href="toolkit.html">Our Toolkit</a>
@@ -422,10 +422,30 @@
       <!-- JOB OPENINGS -->
       <section class="section section-alt">
         <div class="section-inner">
-          <div id="bzOpeningsContainer">
-            <p style="color:black">TESTING - BREEZY LOADED!</p>
+
+        <link rel="stylesheet" href="https://static.zohocdn.com/recruit/embed_careers_site/css/v1.1/embed_jobs.css" type="text/css">
+        <div class="embed_jobs_head embed_jobs_with_style_3">
+          <div class="embed_jobs_head2">
+            <div class="embed_jobs_head3">
+              <div id="rec_job_listing_div"> </div>
+              <script type="text/javascript" src="https://static.zohocdn.com/recruit/embed_careers_site/javascript/v1.1/embed_jobs.js"></script>
+              <script type="text/javascript">
+              rec_embed_js.load({
+                widget_id:"rec_job_listing_div",
+                page_name:"Careers",
+                source:"CareerSite",
+                site:"https://3nconsultinggroup.zohorecruit.com",
+                brand_color:"#6875E2",
+                empty_job_msg:"No current Openings"
+              });
+              </script>
+            </div>
           </div>
-          <script src="https://3n-consulting-llc.breezy.hr/embed/js?inline=true"></script>
+        </div>
+
+
+
+
         </div>
       </section>
     </main>
